# bitdag

./: Cargo.toml  README.md
benches/: dag_benchmark.rs  readme.md
src/: bitdag.rs  edge.rs  error.rs  lib.rs  traits.rs
src/adapters/: json.rs  obo.rs
src/dag_edges/: json.rs  mod.rs  obo.rs
tests/: test_integration.rs
tests/assets/: mini_hp_2025-09-01.json
