[package]
authors = ["Rouven Reuter <Rouven.Reuter@proton.me>"]
description = "A crate to deconstruct the hierrachie of a DAG into a Bitmatrix for fast child-parent-queries."
edition = "2024"
homepage = "https://www.smart-monkey.blog/"
license = "MIT"
name = "bitdag"
version = "0.1.0"

[dependencies]
bit-matrix = { version = "0.9.0", features = ["miniserde"] }
miniserde = { version = "0.1.45", optional = true }
ontolius = "0.7.4"
fastobo = "0.15.5"
thiserror = "2.0.18"
rayon = "1.10.0"

[features]
miniserde = ["dep:miniserde"]