[package]
authors = ["Rouven Reuter <Rouven.Reuter@proton.me>"]
description = "A crate to deconstruct the hierrachie of a DAG into a Bitmatrix for fast child-parent-queries."
edition = "2024"
homepage = "https://www.smart-monkey.blog/"
license = "MIT"
name = "bitdag"
version = "0.1.0"

[dependencies]
bit-matrix = { version = "0.9.0", features = ["miniserde"] }
ontolius = "0.7.4"
fastobo = "0.15.5"
thiserror = "2.0.18"
rayon = "1.10.0"
miniserde = { version = "0.1.45", optional = true }
serde = { version = "1.0.228", optional = true }
[features]
miniserde = ["dep:miniserde", "bit-matrix/miniserde"]
serde = ["dep:serde", "bit-matrix/serde"]